# shixi

./: .gitattributes  path_to_output_video.avi  readme.md  ship_data.txt
Crash_prediction/: AIS_DEVICE_MESSAGE1.csv  read.py  readme.md  regression .py  test.py  test.xlsx
autonomous_robot-fusion_ais_image-889d81fa25bfcc0c07246545114345e29e29b755/: API.py  README.md  ais_utils.py  degree.py  degree_show.py  index.html  read_ship.py  ship_utils.py  test.py  total.py  yolo_utils.py
autonomous_robot-fusion_ais_image-889d81fa25bfcc0c07246545114345e29e29b755/video/: video_output.avi
autonomous_robot-fusion_ais_image-889d81fa25bfcc0c07246545114345e29e29b755/yolov8/: YOLOv8.py  utils.py
dev-filter/: .gitignore  README.md  pipeline3.ipynb  stagemerge.ipynb
dev-filter/test/: bboxdraw.ipynb  plyconvert.ipynb
dev-filter/utils/: __init__.py  dump.py  tools.py
fusion_ais_image/: .gitignore  API.py  README.md  WebAPI.md  ais_smooth_demo.py  app.py  cilent.py  index.html  pt_to_onnx.py  sever.py  ship.txt  ship_utils.py  total.py  videoPlayer.html  video_inference.py  web_test.py  yolo_utils.py
fusion_ais_image/video/: output_video.avi  path_to_output_video.avi  video_output.avi
fusion_ais_image/yolo/: YOLOv10.py  YOLOv8.py  config.py  (+3 more)
linear-filter/: README.md  ekf.ipynb  kdtree.ipynb  segment.ipynb
monodepth2/: AIS_MONO.py  depth_prediction_example.ipynb
ov-seg-easyuse/: .gitignore  README.md  easyuse-demo.py  image_get.py  ov_seg_easyuse.py  requirements.txt  test_video.py
ros2/: README.md
ros2/src/my_package/: CMakeLists.txt
ros2/src/my_package/src/: gps_imitate_server.cpp
(+182 files in other folders)
